@@ -1,4 +1,13 @@
 ## `scores` extractor function for prcurve class
-`scores.prcurve` <- function(x, ...) {
-  matrix(x$lambda, ncol = 1)
+`scores.prcurve` <- function(x, display = c("curve","dimensions"), ...) {
+  display <- match.arg(display)
+  ## return position along the curve?
+  if (isTRUE(all.equal(display, "curve"))) {
+    ret <- matrix(x$lambda, ncol = 1)
+  }
+  ## return coordinates of curve in each dimension
+  if (isTRUE(all.equal(display, "dimensions"))) {
+    ret <- x$s
+  }
+  ret
 }
